--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Cython==0.29.14
 matplotlib==3.2.1
 transformers==2.1.1
 word2vec==0.10.2
+scikit-learn==0.21.0
 pandas==0.25.3
 numpy==1.17.4
 scipy==1.3.3
